# synth

./: .gitmodules  CMakeLists.txt  README.md  project.yml
docs/: bootloader_protocol.md
hardware/synth/: dac.sch  digital_io.sch  encoders_buttons.sch  fp-lib-table  headphone.sch  leds.sch  leds_top_level.sch  lineout.sch  mcu.sch  power.sch  sym-lib-table  synth-cache.lib  synth.dcm  synth.lib  synth.pro  synth.sch
mplab/: .gitignore  conf.mk.defaults
mplab/synth_bootloader/: Makefile
mplab/synth_bootloader/nbproject/: configurations.xml  project.xml
mplab/synth_master/: Makefile
mplab/synth_master/nbproject/: configurations.xml  project.xml
mplab/synth_slave/: Makefile
mplab/synth_slave/nbproject/: configurations.xml  project.xml
scripts/: bootloader_utils.py  combine_hex.py  flash.py  gen_env_table.py  gen_freq_table.py  gen_mdb_flash.py  gen_sine_table.py  midi_monitor.py  table_generator.py  test_bootloader.py
src/: envelope.c  envelope.h  fixed_point.c  fixed_point.h  main.c  oscillator.c  oscillator.h  sysconfig.h
src/bootloader/: CMakeLists.txt  app_status.c  bootloader.ld  cobs.c  crc.c  log.c  main.c  messages.c  serial.c  sysconfig.h  uart.c  version.c
src/bootloader/hal/: CMakeLists.txt  crc.c  flash.c  gpio.c  system.c  timer.c  traps.c  uart.c
src/bootloader/hal/include/: crc.h  flash.h  gpio.h  sysconfig.h  system.h  timer.h  uart.h
src/bootloader/include/: app_status.h  cobs.h  log.h  messages.h  serial.h  uart.h  version.h
src/common/: memory_map.ld
src/common/include/: common_cmd.h  common_types.h
src/master/: CMakeLists.txt  app_status.c  main.c  master.ld  sysconfig.h  system.c  system.h  version.c
src/master/hal/: CMakeLists.txt  system.c  uart.c
src/master/hal/include/: sysconfig.h
src/master/include/: app_status.h  version.h
src/slave/: CMakeLists.txt  main.c  system.c  system.h  uart.c
src/slave/app/: CMakeLists.txt  audio.c  cmd_parser.c  envelope.c  oscillator.c  synth.c  synth.s  synth_ctrl.c  voice.c
src/slave/app/include/: audio.h  cmd_parser.h  envelope.h  envelope_update.h  oscillator.h  oscillator_update.h  synth.h  synth_ctrl.h  voice.h
src/slave/hal/: CMakeLists.txt  dac.c  msi.c  timer.c
src/slave/hal/include/: dac.h  msi.h  timer.h  uart.h
test/: test_envelope.c  test_fixed_point.c  test_oscillator.c
test/asm/: CMakeLists.txt  README.md  test_synth.c
test/asm/include/: unity_config.h
test/bootloader/: cobs_data.h  test_cobs.c  test_messages.c  test_serial.c
test/slave/app/: test_cmd_parser.c  test_envelope.c  test_oscillator.c  test_synth_ctrl.c  test_voice.c
test/support/: cmd_callback.h
